# escapemgmt

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yml
ansible/: README.md  ansible.cfg  docker-update.yml  docker.yml  escapemgmt-server.yml  hosts  raspi-docker-install.yml  raspi-docker-update.yml  raspi-xfce.yml  raspi.yml  tv.yml
ansible/raspi/: xfce-session.cfg  xfce4-desktop.xml  xfce4-panel.xml
backend/: .gitignore  BUILD  Dockerfile  README.md  WORKSPACE  app.py  app.wsgi  build_defs.bzl  build_docker.sh  config.py  init_db.sh  k8s-mariadb.yml  k8s-pulsar.yml  k8s.yml  requirements.txt  run.py  run_dev.sh  run_docker_local.sh  supervisord.conf
backend/app/: BUILD  __init__.py  app.py  bookings.py  config.py  devices.py  files.py  health.py  hypercorn_bin.py  initdb.py  logger.py  main.py  main_test.py  migrate.py  models.py  presets.py  presets_test.py  prestart.sh  pubsub.py  rooms.py  rooms_test.py  schema_migrate.py  start.sh  streams.py  streams_test.py  streamviews.py  (+1 more)
bookings-import/: .gitignore  Dockerfile  backend.py  docker_build.sh  import.py  k8s.yml  requirements.txt
frontend/: .angular-cli.json  .bazelrc  .dockerignore  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  bazel.rc  build_docker.sh  default.conf  docker_build.sh  frontend.tmpl  k8s.yml  ng_ts_library.bzl  nginx.conf  package-lock.json  package.json  run_dev.sh  run_docker_local.sh  tsconfig.json
frontend/src/: BUILD.bazel  environment.ts  index.dev.html  index.html  index.prod.html  initialize_testbed.ts  main.dev.ts  main.prod.ts  material.module.ts  require.config.js  rollup.config.js  styles.scss  tsconfig-test.json  tsconfig.json
frontend/src/app/: BUILD.bazel  app.component.html  app.component.scss  app.component.ts  app.module.ts  booking.ts  bookings.service.ts  common.module.ts  device.ts  devices.component.html  devices.component.ts  devices.service.ts  entity-utils.ts  material.module.ts  nav.service.ts  preset-group.ts  preset.ts  presets.component.html  presets.component.ts  presets.service.ts  room.ts  rooms.component.ts  rxjs-utils.ts  score.ts  scores.component.html  scores.component.ts  scores.service.spec.ts  scores.service.ts  stream-utils.ts  stream.ts  streams.component.html  streams.component.ts  streamview.ts
frontend/src/app/bookings/: BUILD.bazel  booking-create.dialog.html  booking-create.dialog.scss  booking-create.dialog.ts  bookings-card.component.html  bookings-card.component.scss  bookings-card.component.ts  bookings.component.html  bookings.component.scss  bookings.component.ts  bookings.module.ts  dash.component.html  dash.component.scss  dash.component.ts  payment-bookings.dialog.html  payment-bookings.dialog.ts  payment-message.dialog.html  payment-snack-gallery.dialog.html  payment-snack-gallery.dialog.ts  payment-value.dialog.html  payment-value.dialog.ts  payment-voucher.dialog.html  payment-voucher.dialog.scss  payment-voucher.dialog.ts  payments.component.html  payments.component.scss  payments.component.ts
frontend/src/app/devices/: BUILD.bazel  device-add-stream.dialog.html  device-add-stream.dialog.scss  device-add-stream.dialog.ts  device-create.dialog.html  device-create.dialog.scss  device-create.dialog.ts  device-delete.dialog.html  device-delete.dialog.ts  device-edit-streams.component.html  device-edit-streams.component.scss  device-edit-streams.component.ts  device-edit.component.html  device-edit.component.scss  device-edit.component.ts  devices.component.css  devices.component.html  devices.component.scss  devices.component.ts  devices.module.ts  preset-create.dialog.html  preset-create.dialog.ts  preset-delete.dialog.html  preset-delete.dialog.ts  preset-group-create.dialog.html  preset-group-create.dialog.ts  preset-group-delete.dialog.html  preset-group-delete.dialog.ts  preset-group-edit.component.html  preset-group-edit.component.ts  preset-group-form.component.html  preset-group-form.component.scss  preset-group-form.component.ts  preset-groups.component.html  preset-groups.component.scss  preset-groups.component.ts  presets.component.html  presets.component.scss  presets.component.ts  root.component.html  (+20 more)
frontend/src/app/frontscreen/: BUILD.bazel  frontscreen.component.css  frontscreen.component.html  frontscreen.component.scss  frontscreen.component.ts  frontscreen.module.ts  highscore.component.css  highscore.component.html  highscore.component.scss  highscore.component.ts  rooms.service.ts  roomslide.component.html  roomslide.component.scss  roomslide.component.ts  slide.component.html  slide.component.ts  slidecontainer.component.scss  slidecontainer.component.ts
frontend/src/app/rooms/: BUILD.bazel  create.component.css  create.component.html  create.component.ts  create.dialog.html  create.dialog.scss  create.dialog.ts  filebuffer.ts  fileupload.component.html  fileupload.component.scss  fileupload.component.ts  fileupload.service.ts  rooms-delete-dialog.html  rooms.component.css  rooms.component.html  rooms.component.scss  rooms.component.ts  rooms.module.ts  root.component.css  root.component.html  root.component.ts  score-add-dialog.html  score-add.dialog.html  score-add.dialog.ts  score-delete-dialog.html  score-edit-dialog.html  score-edit.dialog.ts  scores.component.css  scores.component.html  scores.component.scss  scores.component.ts  timeinput.component.ts
frontend/src/environments/: environment.docker.ts
frontscreen/: .angular-cli.json  README.md  package-lock.json  package.json
netboot/: docker-compose.yml
node_exporter2/: .gitignore  BUILD  WORKSPACE  arp.go  go.mod  go.sum  node_exporter2.go
raspi-streamer/: .gitignore  Dockerfile  README.md  background.py  docker_build.sh  docker_push.sh  docker_run.sh  main.py  parameter_client.py  requirements.txt  start.sh  stream.py  streamer.py  supervisord.conf  url_fetcher.py
sqlbackup/: BUILD  WORKSPACE  go.mod  go.sum  sqlbackup.go
tests/: docker-compose-config.sh
video-streamer/: BUILD  WORKSPACE  go.mod  videostreamer.c  videostreamer.go  videostreamer.h
(+93 files in other folders)
