load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

package(default_visibility = ["//visibility:public"])

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

alias(
    name = "frontend_dev",
    actual = "//src:devserver",
)

container_image(
    name = "frontend_image",
    base = "@frontend_base//image",
    cmd = [
        "nginx",
        "-g",
        "daemon off;",
    ],
    env = {
        "API_ADDR": "http://escape-backend:8080",
    },
    files = [
        ":default.conf",
        "//src:prodapp",
    ],
    symlinks = {
        "/etc/nginx/conf.d/default.conf": "/default.conf",
    },
)

container_push(
    name = "frontend_push",
    format = "Docker",
    image = ":frontend_image",
    registry = "192.168.0.80:5000",
    repository = "escape_frontend",
    tag = "prod",
)

container_push(
    name = "frontend_canary_push",
    format = "Docker",
    image = ":frontend_image",
    registry = "192.168.0.80:5000",
    repository = "escape_frontend",
    tag = "canary",
)
