load("@npm//@bazel/concatjs:index.bzl", "karma_web_test", "karma_web_test_suite")

package(default_visibility = ["//src:__subpackages__"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//:ng_ts_library.bzl", "ng_ts_library")

sass_binary(
    name = "app-style",
    src = "app.component.scss",
)

ng_ts_library(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
    ],
    angular_assets = [
        ":app-style",
        ":app.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        ":common_lib",
        ":common_module",
        "//src/app/bookings",
        "//src/app/devices",
        "//src/app/frontscreen",
        "//src/app/rooms",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
    ],
)

ng_ts_library(
    name = "common_module",
    srcs = [
        "common.module.ts",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        ":material_module",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
    ],
)

ng_ts_library(
    name = "material_module",
    srcs = [
        "material.module.ts",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/material-moment-adapter",
    ],
)

ts_library(
    name = "common_lib",
    srcs = [
        "booking.ts",
        "bookings.service.ts",
        "device.ts",
        "devices.service.ts",
        "entity-utils.ts",
        "nav.service.ts",
        "preset.ts",
        "preset-group.ts",
        "presets.service.ts",
        "room.ts",
        "rxjs-utils.ts",
        "score.ts",
        "scores.service.ts",
        "stream.ts",
        "stream-utils.ts",
        "streamview.ts",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src:environment_lib",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "scores_service_test",
    testonly = 1,
    srcs = ["scores.service.spec.ts"],
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":common_lib",
        "@npm//@types/jasmine",
    ],
)
