load("@npm//@bazel/concatjs:index.bzl", "karma_web_test", "karma_web_test_suite")

package(default_visibility = ["//src/app:__subpackages__"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//:ng_ts_library.bzl", "ng_ts_library")

SCSS_ASSETS = [
    "booking-create.dialog.scss",
    "bookings-card.component.scss",
    "bookings.component.scss",
    "dash.component.scss",
    "payment-snack-gallery.dialog.scss",
    "payment-message.dialog.scss",
    "payment-value.dialog.scss",
    "payment-bookings.dialog.scss",
    "payment-voucher.dialog.scss",
    "payments.component.scss",
]

[
    sass_binary(
        name = asset[:-5],
        src = asset,
        sourcemap = False,
        deps = ["//src:styles_lib"],
    )
    for asset in SCSS_ASSETS
]

CSS_ASSETS = [asset[:-5] for asset in SCSS_ASSETS]

ng_ts_library(
    name = "bookings",
    srcs = [
        "booking-create.dialog.ts",
        "bookings.component.ts",
        "bookings.module.ts",
        "bookings-card.component.ts",
        "dash.component.ts",
        "payment-bookings.dialog.ts",
        "payment-snack-gallery.dialog.ts",
        "payment-value.dialog.ts",
        "payment-voucher.dialog.ts",
        "payments.component.ts",
    ],
    angular_assets = [
        ":booking-create.dialog.html",
        ":bookings-card.component.html",
        ":bookings.component.html",
        ":dash.component.html",
        ":payment-snack-gallery.dialog.html",
        ":payment-value.dialog.html",
        ":payment-bookings.dialog.html",
        ":payment-message.dialog.html",
        ":payment-voucher.dialog.html",
        ":payments.component.html",
    ] + CSS_ASSETS,
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/app:common_lib",
        "//src/app:common_module",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/router",
        "@npm//autonumeric",
        "@npm//moment",
        "@npm//rxjs",
    ],
)
