package(default_visibility = ["//src/app:__subpackages__"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

SCSS_ASSETS = [
    "device-add-stream.dialog.scss",
    "device-create.dialog.scss",
    "devices.component.scss",
    "device-edit.component.scss",
    "device-edit-streams.component.scss",
    "preset-create.dialog.scss",
    "preset-group-create.dialog.scss",
    "preset-group-delete.dialog.scss",
    "preset-group-edit.component.scss",
    "preset-group-form.component.scss",
    "preset-groups.component.scss",
    "presets.component.scss",
    "screen-group.component.scss",
    "screens.component.scss",
    "stream-create.dialog.scss",
    "stream-edit.dialog.scss",
    "streams.component.scss",
    "view.component.scss",
]

[
    sass_binary(
        name = asset[:-5],
        src = asset,
        sourcemap = False,
        deps = ["//src:styles_lib"],
    )
    for asset in SCSS_ASSETS
]

CSS_ASSETS = [asset[:-5] for asset in SCSS_ASSETS]

ng_module(
    name = "devices",
    srcs = [
        "device-add-stream.dialog.ts",
        "device-create.dialog.ts",
        "device-delete.dialog.ts",
        "device-edit.component.ts",
        "device-edit-streams.component.ts",
        "devices.component.ts",
        "devices.module.ts",
        "preset-create.dialog.ts",
        "preset-delete.dialog.ts",
        "preset-group-create.dialog.ts",
        "preset-group-delete.dialog.ts",
        "preset-group-edit.component.ts",
        "preset-group-form.component.ts",
        "preset-groups.component.ts",
        "presets.component.ts",
        "screen-group.component.ts",
        "screens.component.ts",
        "stream-create.dialog.ts",
        "stream-edit.dialog.ts",
        "streams.component.ts",
        "view.component.ts",
    ],
    assets = [
        "device-add-stream.dialog.html",
        "device-create.dialog.html",
        "device-delete.dialog.html",
        "device-edit.component.html",
        "device-edit-streams.component.html",
        "devices.component.html",
        "preset-create.dialog.html",
        "preset-group-create.dialog.html",
        "preset-group-delete.dialog.html",
        "preset-delete.dialog.html",
        "presets.component.html",
        "preset-groups.component.html",
        "preset-group-form.component.html",
        "preset-group-edit.component.html",
        "screen-group.component.html",
        "screens.component.html",
        "stream-create.dialog.html",
        "stream-delete.dialog.html",
        "stream-edit.dialog.html",
        "streams.component.html",
        "view.component.html",
    ] + CSS_ASSETS,
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src:environment_lib",
        "//src/app:common_lib",
        "//src/app:common_module",
        "@npm//moment",
    ],
)
