load("@npm//@bazel/concatjs:index.bzl", "karma_web_test", "karma_web_test_suite")

package(default_visibility = ["//src/app:__subpackages__"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//:ng_ts_library.bzl", "ng_ts_library")

SCSS_ASSETS = [
    "create.dialog.scss",
    "fileupload.component.scss",
    "rooms.component.scss",
    "scores.component.scss",
    "score-edit.dialog.scss",
]

[
    sass_binary(
        name = asset[:-5],
        src = asset,
        sourcemap = False,
        deps = ["//src:styles_lib"],
    )
    for asset in SCSS_ASSETS
]

CSS_ASSETS = [asset[:-5] for asset in SCSS_ASSETS]

ng_ts_library(
    name = "rooms",
    srcs = [
        "create.dialog.ts",
        "filebuffer.ts",
        "fileupload.component.ts",
        "fileupload.service.ts",
        "rooms.component.ts",
        "rooms.module.ts",
        "score-add.dialog.ts",
        "score-edit.dialog.ts",
        "scores.component.ts",
        "timeinput.component.ts",
    ],
    angular_assets = [
        "create.dialog.html",
        "fileupload.component.html",
        "rooms.component.html",
        "rooms-delete-dialog.html",
        "score-add.dialog.html",
        "score-delete-dialog.html",
        "score-edit-dialog.html",
        "scores.component.html",
    ] + CSS_ASSETS,
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src:environment_lib",
        "//src/app:common_lib",
        "//src/app:common_module",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/material",
        "@npm//@angular/router",
        "@npm//moment",
        "@npm//rxjs",
    ],
)
